I added the floating action button and connect it to fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="newTask">add</string>
     <string name="task_date">task date</string>
     <string name="add_task">add task</string>
-    <string name="todo">TODO</string>
     <string name="save_task">save task</string>
+    <string name="empty_not_saved">Word not saved because it is empty.</string>
+    <string name="todo">TODO</string>
+    <string name="all_tasks">All Tasks</string>
+    <string name="delete_task">Delete task</string>
+
 </resources>
